update about me content

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
         <div class="about__context">
           <h1><span class="about__name"><b>Heungbin Oh</b></span></h1>
-          <h2 class="about__role">Software Developer</h2>
+          <h2 class="about__role">Growing Software Developer</h2>
           <p class="about__desc">
-            Promising Software Developer with civil engineering knowledge as well.
+            Promising Software Developer with solid Civil Engineering expertise.
           </p>
 
           <div class="about__contact center">
@@ -65,7 +65,19 @@
           <h2 class="section__title">About me</h2>
           <section class="subsection">
             <div class="context__overall">
-              <p>Interested in Full-stack development and AI. </p>
+              <p>
+                Dedicated Growing Software Developer with a solid background 
+                in Civil Engineering. 
+                My passion lies in Full-Stack Development and AI. 
+
+                Currently, expanding expertise through Seneca College's 
+                Computer Programming & Analysis (CPA) program, 
+                focusing on C, C++, and SQL for database management. 
+      
+                My commitment to innovation and problem-solving is evident 
+                through successful software projects 
+                and continuous learning in emerging technologies. 
+              </p>
             </div>
             <!-- Details -->
             <div class="tab">
