update new prj to portfolio

--- a/index.html
+++ b/index.html
@@ -184,19 +184,32 @@
                 <!-- Project 1 -->
                 <div class="project">
                   <div class="prj__img">
+                    <img src="img/job_scrapper_logo.png" alt="Jop Scraping Project Image">
+                  </div>
+                  <div class="prj__content">
+                    <h3>Job Scraping</h3>
+                    <a href="https://replit.com/@orane5050/Python#main.py" class="prj__link" target="_blank">Project link</a>
+                    <p class="project__description">
+                      Job scraping to search and export jobs
+                    </p>
+                  </div>
+                </div>
+                <!-- Project 2 -->
+                <div class="project">
+                  <div class="prj__img">
                     <img src="img/kokoa-logo.png" alt="Kokoa Clone Project Image">
                   </div>
                   <div class="prj__content">
                     <h3>Kokoa Clone</h3>
-                    <a href="https://heungbin-oh.github.io/kokoa-clone/" class="prj__link" target="_blank">Kokoa Clone link</a>
+                    <a href="https://heungbin-oh.github.io/kokoa-clone/" class="prj__link" target="_blank">Project link</a>
+                    <a href="https://github.com/Heungbin-Oh/kokoa-clone" class="prj__link" target="_blank">GitHub link</a>
                     <p class="project__description">
                       Create Clone Kokoa pages in mobile size
                     </p>
-                    <a href="https://github.com/Heungbin-Oh/kokoa-clone" class="prj__link" target="_blank">GitHub link</a>
                   </div>
                 </div>
 
-                <!-- Project 2 -->
+                <!-- Project 3 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/hackathon-logo.png" alt="Seneca Hackathon Project Image">
@@ -209,6 +222,7 @@
                     </p>
                   </div>
                 </div>
+                
               </div>
             </div>
 
