--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   </div>
                   <div class="prj__content">
                     <h3>Job Scraping</h3>
-                    <a href="https://replit.com/@orane5050/Python" class="prj__link" target="_blank">Project link</a>
+                    <a href="https://replit.com/@orane5050/Python#main.py" class="prj__link" target="_blank">Project link</a>
                     <p class="project__description">
                       Job scraping to search and export jobs
                     </p>
