--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@
                 <!-- Project 1 -->
                 <div class="project">
                   <div class="prj__img">
+                    <img src="img/full-stack_GPT_logo.png" alt="Full-stack GPT logo">
+                  </div>
+                  <div class="prj__content">
+                    <h3>Full stack GPT</h3>
+                    <a href="https://heungbin-oh-full-stack-gpt-home-mvxb4f.streamlit.app/" class="prj__link" target="_blank">Project link</a>
+                    <a href="https://github.com/Heungbin-Oh/full-stack-gpt" class="prj__link" target="_blank">GitHub link</a>
+                    <p class="project__description">
+                      !admin code: 0622!<br>
+                      Full-Stack GPT Project with openai, langchain, streamlit, etc
+                    </p>
+                  </div>
+                </div>
+                <!-- Project 2 -->
+                <div class="project">
+                  <div class="prj__img">
                     <img src="img/job_scrapper_logo.png" alt="Jop Scraping Project Image">
                   </div>
                   <div class="prj__content">
@@ -194,7 +209,7 @@
                     </p>
                   </div>
                 </div>
-                <!-- Project 2 -->
+                <!-- Project 3 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/kokoa-logo.png" alt="Kokoa Clone Project Image">
@@ -209,7 +224,7 @@
                   </div>
                 </div>
 
-                <!-- Project 3 -->
+                <!-- Project 4 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/hackathon-logo.png" alt="Seneca Hackathon Project Image">
