--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <a href="https://heungbin-oh-full-stack-gpt-home-mvxb4f.streamlit.app/" class="prj__link" target="_blank">Project link</a>
                     <a href="https://github.com/Heungbin-Oh/full-stack-gpt" class="prj__link" target="_blank">GitHub link</a>
                     <p class="project__description">
-                      !admin code: 0622!<br>
+                      <b>!admin code:</b> 0622<br>
                       Full-Stack GPT Project with openai, langchain, streamlit, etc
                     </p>
                   </div>
