update airbnb prj

--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@
                 <!-- Project 1 -->
                 <div class="project">
                   <div class="prj__img">
+                    <img src="img/airbnb_logo.png" alt="Airbnb logo">
+                  </div>
+                  <div class="prj__content">
+                    <h3>Back-End Airbnb Clone Project</h3>
+                    <a href="https://github.com/Heungbin-Oh/airbnb-clone-backend" class="prj__link" target="_blank">GitHub link</a>
+                    <p class="project__description">
+                      Developed the backend for an Airbnb clone using Python, Django, Django REST Framework.
+                    </p>
+                  </div>
+                </div>
+                <!-- Project 2 -->
+                <div class="project">
+                  <div class="prj__img">
                     <img src="img/full-stack_GPT_logo.png" alt="Full-stack GPT logo">
                   </div>
                   <div class="prj__content">
@@ -196,7 +209,7 @@
                     </p>
                   </div>
                 </div>
-                <!-- Project 2 -->
+                <!-- Project 3 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/job_scrapper_logo.png" alt="Jop Scraping Project Image">
@@ -209,7 +222,7 @@
                     </p>
                   </div>
                 </div>
-                <!-- Project 3 -->
+                <!-- Project 4 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/kokoa-logo.png" alt="Kokoa Clone Project Image">
@@ -224,7 +237,7 @@
                   </div>
                 </div>
 
-                <!-- Project 4 -->
+                <!-- Project 5 -->
                 <div class="project">
                   <div class="prj__img">
                     <img src="img/hackathon-logo.png" alt="Seneca Hackathon Project Image">
