fixing pdf file for scholarship

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <li><span>Winter, 2024</span><br><a href="./documents/Presidents_Honour_List.pdf" target="_blank"><u>President's Honour (Seneca Polytechnic)</u></a></li>
 
                   <h5><br>Civil Engineering</h5>
-                  <li><span>2018-2019</span><br><a href="./documents/National Science & Technology Scholarship.jpg & Technology Scholarship.jpg" target="_blank"><u>National Science & Technology Scholarship</u></a></li>
+                  <li><span>2018-2019</span><br><a href="./documents/National Science & Technology Scholarship-merged.pdf" target="_blank"><u>National Science & Technology Scholarship</u></a></li>
                   <li><span>4th semester, 2016</span>
                     <br>1st place honoured
                   </li>
