--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 Currently, expanding expertise through Seneca College's 
                 Computer Programming & Analysis (CPA) program, 
-                focusing on C, C++, and SQL for database management. 
+                focusing on C++, C, SQL for database management and WEB Development. 
       
                 My commitment to innovation and problem-solving is evident 
                 through successful software projects 
@@ -91,9 +91,12 @@
 
               <div class="tab-contents active-tab" id="skills">
                 <ul>
-                  <li><span>Front-End</span><br> JavaScript, HTML, CSS</li>
-                  <li><span>Back-End</span><br>Python, Java, C++</li>
+                  <li><span>Frameworks</span><br> Django, Streamlit, Flask</li>
+                  <li><span>Languages</span><br> C++, Python, C, HTML/CSS, JavaScript</li>
                   <li><span>Database Management</span><br>SQL</li>
+                  <li><span>API</span><br>OpenAI, Langchain, Langsmith</li>
+                  <li><span>Technologies</span><br>GitHub, VScode</li>
+
 
                   <h5><br>Civil Engineering</h5>
                   <li><span>Design</span><br>CAD, Train Performance Simulation (TPS)</li>
@@ -320,8 +323,8 @@
     <div class="contact__box">
       <div class="contact__context">
         <i class="fa-regular fa-envelope fa-2x"></i> 
-        <a href="mailto:orane5050@gmail.com" class="contact-link" target="_blank">
-          <span>orane5050@gmail.com</span>
+        <a href="mailto:heungbin.oh.dev@gmail.com" class="contact-link" target="_blank">
+          <span>heungbin.oh.dev@gmail.com</span>
         </a>
       </div>
       <div class="contact__context">
