--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       </div>
       <div class="contact__context">
         <i class="fa-brands fa-linkedin fa-2x"></i>
-        <a href="https://www.linkedin.com/in/%ED%9D%A5%EB%B9%88-%EC%98%A4-25047322a/" class="contact-link" target="_blank">
+        <a href="https://www.linkedin.com/in/heungbin-oh-25047322a/" class="contact-link" target="_blank">
           <span>Linkedin</span>
         </a>
       </div>
