--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                   <div class="prj__content">
                     <h3>2025 Housing Hackathon Project</h3>
                     <a href="https://2025-hackathon-smart-donation-hub.vercel.app/" class="prj__link" target="_blank">Project link</a>
+                    <a href="https://github.com/Heungbin-Oh/2025-Hackathon-SmartDonationHub" target="_blank">GitHub link</a>
                     <p class="project__description">
                       Implemented Food charity service using Gemini AI, MongoDB, Javascript, React, etc
                     </p>
