--- a/index.html
+++ b/index.html
@@ -177,8 +177,11 @@
               <!-- Honours and Awards -->
               <div class="tab-contents" id="honours-awards">
                 <ul>
-                  <li><span>March, 2025</span><br>
-                      Finalist in the 2025 Hackathon hosted by Seneca Polytechnic
+                  <li><span>March, 2025</span><br><a href="./documents/2024-03-25_2024-housing-hackathon-finalist-en.pdf"
+                      target="_blank"><u>
+                    Finalist in the 2025 Hackathon hosted by Seneca Polytechnic
+                  </u>
+                      
                   </li>
                   <li><span>March, 2024</span><br><a href="./documents/2024-03-25_2024-housing-hackathon-finalist-en.pdf"
                       target="_blank"><u>Finalist in the 2024 Hackathon hosted by Seneca Polytechnic</u></a></li>
